:adhesive_bandage: simple fix on spacing and gap in index html

--- a/index.css
+++ b/index.css
@@ -9,7 +9,7 @@ body {
     background-size: cover;
     background-attachment: fixed;
     background-position: top;
-    min-height: 100%;
+    min-height: 100vh;
 }
 
 .image-logo {
